Fix search inputs visibility

--- a/projects/ngx-easy-table/assets/style.scss
+++ b/projects/ngx-easy-table/assets/style.scss
@@ -68,7 +68,7 @@ $primary-color: #50596c !default;
     &__body-empty {
     }
 
-    &__sort-header {
+    &__search-header {
     }
 
     &__table-menu {
